welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value Buggle2
if (Buggle2 est FaceMur) avance(); 
    ^